# Construction-Custom-Frappe

./: README.md  pyproject.toml
.github/workflows/: ci.yml
construction_mgt/: hooks.py
construction_mgt/construction_management/doctype/bill_of_quantities/: bill_of_quantities.js  bill_of_quantities.json
construction_mgt/construction_management/doctype/boq_item/: boq_item.json
construction_mgt/construction_management/doctype/material_schedule/: material_schedule.js  material_schedule.json
construction_mgt/construction_management/doctype/material_schedule_items/: material_schedule_items.json
construction_mgt/custom_api/: material_request.py
construction_mgt/fixtures/: custom_field.json
construction_mgt/public/js/: material_request.js
